# firment

./: .gitignore  .gitmodules  AppNotes.md  CMakeLists.txt  README.md  gen-proto.sh  run-tests.sh  todo.md
broker/: broker-cert.conf  broker.sh  client.sh  mosquitto.conf  paho-client.py
cmake-tools/: fmtTransport.cmake
docs/: debugging.md
esp/mqtt5/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  fmt_esp_spi.c  fmt_esp_spi.h  fmt_esp_uart.c  fmt_esp_uart.h  spi_app.c  spi_app.h  spi_err.c
example/: CMakeLists.txt  README.md  bootloaderMcuPort.cmake  build-stm.sh  build-xmc.sh  cmFlashLib.cmake  firmentConfig.cmake  firment_msg_config.json  gen-proto.sh  generate.sh  mcu_1.proto  messages.proto  mockTelemetry.py  toolchain-xmc.cmake
example/config/: firmentConfig.cmake  mcuCompileOptions.cmake  messages.proto  partitions.cmake  probes.proto  toolchain-xmc.cmake  version.cmake
example/e2e/: package.json  playwright.config.ts  tsconfig.json
example/e2e/tests/: 1-frontEnd.test.ts  2-updateFirmware.test.ts  brokerConnect.test.ts  fwUpdate.test.ts  shared.ts  waveform.test.ts
example/firmware/: CMakeLists.txt  README.md  RTE_Device.h  RTE_ProjectConfig.h  STM32G431XX_FLASH.ld.in  STM32L476XX_FLASH.ld.in  build-test.sh  build-xmc.sh  control.c  control.h  example_comms.c  example_comms.h  flash.c  fmt_spi.c  fmt_spi.h  fmt_waveform_cfg.h  frequency.h  fw_update.h  init_spi.c  init_spi_pcb0.c  init_spi_pcb1.c  init_transport.h  message_handlers.c  mgtBoot_adapter.c  priority.h  project_comms.c  project_comms.h  spi_example.c  toolchain-xmc.cmake
example/firmware/config/: ISR_Config.h  RTE_Components.h  RTE_DeviceConfig.h  gpio_pcb.h  gpio_pcbDetails.h  project_comms.h  spi_config.c  spi_config.h
example/firmware/config/pcb0/: comm_pcbDetails.h  gpio_pcbDetails.h  init_transport.c  ioc_pcbDetails.h  spi_pcbDetails.h  timer_pcbDetails.h
example/firmware/config/pcb1/: MX_Device.h  gpio_pcbDetails.h  init_transport.c  ioc_pcbDetails.h  spi_pcbDetails.h  stm32l4xx_hal_conf.h
example/firmware/config/pcb2/: gpio_pcbDetails.h  init_transport.c  stm32l4xx_hal_conf.h  uart_pcbDetails.h
example/firmware/config/pcb3/: gpio_pcbDetails.h  init_transport.c  stm32_hal_dispatch.h  uart_pcbDetails.h
example/firmware/lib/XMC4000_DFP/: Infineon.XMC4000_DFP.pdsc  Infineon.pidx
example/firmware/lib/XMC4000_DFP/Device/XMClib/inc/: xmc_can.h  xmc_ccu8.h  xmc_dma.h  xmc_usic.h
example/firmware/lib/XMC4000_DFP/Device/XMClib/src/: xmc4_gpio.c  xmc_can.c
example/firmware/lib/XMC4000_DFP/Flash/: XMC4800_2048.FLM  XMC4800c_2048.FLM
example/firmware/lib/XMC4000_DFP/Flash/XMC4800/: FlashPrg.c  XMC4800.uvopt
example/firmware/lib/XMC4000_DFP/RTE_Driver/: CAN.c  ETH_PHY_KSZ8031.c  I2C.c  MCI.c  SAI.c  SPI.c  USBH.h
example/firmware/lib/XMC4000_DFP/RTE_Driver/Config/XMC4800_F144/: RTE_Device.h
example/firmware/spi-blink/: spi-blink.ino
example/test/: CMakeLists.txt  initSpiTest.cpp
example/tools/: copy-cubemx-files.sh
example/web-ui/: index.html  package-lock.json  package.json
example/web-ui/src/: App.css  App.tsx  BrokerAddress.tsx  Log.tsx  Plot.css  Plot.tsx  fmt-lib  index.css  mqclient.tsx  plot.tsx  plotLabeler.ts  plotModel.tsx  plotTools.tsx
example/web-ui/src/plot/: Plot.css  Plot.tsx  PlotLabels.tsx  axisTools.ts  plotModel.tsx  traceStats.ts
firmware/: RTE_Components.h  assert.h  crc.h  deviceId_port.h  fmt_assert.h  fmt_comms.c  fmt_comms.h  fmt_crc.h  fmt_flash.h  fmt_gpio.c  fmt_gpio.h  fmt_gpio_port.h  fmt_hardfault.c  fmt_hardfault.h  fmt_ioc.h  fmt_log.c  fmt_log.h  fmt_periodic.h  fmt_rx.c  fmt_rx.c.in  fmt_rx.h  fmt_rx.in.c  fmt_sizes.h  fmt_spi.c  fmt_spi.h  fmt_spi_port.h  fmt_sysInit.h  fmt_transport.c  fmt_transport.h  fmt_types.c  fmt_types.h  fmt_uart.c  fmt_uart.h  fmt_uart_frame.c  fmt_uart_frame.h  fmt_uart_port.h  fmt_update.c  fmt_update.in.h  fmt_version.c  fmt_version.h.in  (+7 more)
firmware/port/XMC4/: CMakeLists.txt  XMC4700x2048.ld  core_port.h  deviceId_port.c  fmt_crc_xmc4.c  fmt_flash_port.c  fmt_flash_port.h  fmt_flash_xmc4.c  fmt_gpio_xmc.c  fmt_ioc_xmc4.c  fmt_periodic_xmc4.c  fmt_spi_port.c  fmt_spi_port.h  fmt_spi_xmc4.c  fmt_sysInit_port.c  gpio_mcuDetails.h  ioc_xmc4.c  spi_mcuDetails.h  timer_mcuDetails.h
firmware/port/XMC4/4800_F144/: Device_IOC.h  RTE_Device.h  ioc_mcuDetails.h
firmware/port/XMC4/4800_F144/template_pcbDetails/: can_pcbDetails.h  enet_pcbDetails.h  spi_pcbDetails.h  uart_pcbDetails.h  usb_pcbDetails.h
firmware/port/XMC4/XMC4000_DFP/: exclude.txt
firmware/port/XMC4/XMC4000_DFP/Device/XMC4700_series/Source/GCC/: startup_XMC4700.S
firmware/port/XMC4/XMC4000_DFP/Device/XMClib/inc/: xmc_ccu4.h  xmc_common.h  xmc_i2c.h  xmc_uart.h
firmware/port/XMC4/XMC4000_DFP/Device/XMClib/src/: xmc_eth_mac.c
firmware/port/XMC4/XMC4000_DFP/RTE_Driver/: CAN.h  ETH_PHY_KSZ8081.c  I2C.h  MCI.h  SPI.h  UART.c  UART.h  USBD.h  USBH.c
firmware/port/host/: CMakeLists.txt  Device_IOC.h  RTE_Device.h  arm_transport_drivers.c  cmsis_gcc.h  comm_test.h  core_cm4.h  core_port.h  crc_mcuDetails.h  crit_section_port.h  deviceId_port.c  fmt_crc_host.c  fmt_flash_mock.c  fmt_flash_port.h  fmt_ioc_test.c  fmt_ioc_test.h  fmt_spi_host.c  fmt_transport_host.c  gpio_common.h  gpio_mcuDetails.h  gpio_spy.c  ioc_mcuDetails.h  ioc_spy.c  mcu_gpio.h  spi_test.c  spi_test.h
firmware/port/stm32/: CMakeLists.txt  MX_Device.h  crc_mcuDetails.h  deviceId_port.c  fmt_flash_port.c  fmt_periodic_port.c  fmt_sysInit_port.c  fmt_uart_port.c  stm32_hal_dispatch.h  timer_mcuDetails.h
firmware/port/stm32l4/: CMakeLists.txt  MX_Device.h  core_port.h  fmt_crc_port.c  fmt_flash_port.c  fmt_flash_port.h  fmt_periodic_port.c  fmt_spi_port.c  fmt_sysInit_port.c  fmt_uart_port.c  gpio_port.c  ioc_mcuDetails.h  ioc_port.c  spi_mcuDetails.h  timer_mcuDetails.h
guides/: appNotes.md  debugging.md
protocol/: firment_msg.in.proto  gen-proto.sh  generator.py  mcu_1.proto  (+1 more)
test/: CMakeLists.txt  firmentConfig.cmake  mcuCompileOptions.cmake  messages.proto  run-tests.sh
test/firmware/: ISR_Config.h  fmt_waveform_cfg.h  gp_config.h  project_comms.h
(+88 files in other folders)
