idf_component_register(
  SRCS 
    "app_main.c" 
    "fmt_esp_spi.c"
    "fmt_esp_uart.c"
    "../firmware/fmt_uart_frame.c"
    "../example/build/pb/firment_msg.pb.c"
    "../example/build/pb/messages.pb.c"
    "../protocol/nanopb/pb_decode.c"
    "../protocol/nanopb/pb_common.c"
  INCLUDE_DIRS 
    "." 
    "../firmware"
    "../protocol/nanopb"
    "../example/build/pb"
)